Error Message
Arduino: 1.8.5 (Windows 10), Board: "Arduino/Genuino Uno"

Build options changed, rebuilding all
C:\Users\mdkar\OneDrive\Documents\Arduino\project4.4\project4.4.ino: In function 'void setup()':

project4.4:22: error: 'blueLEDPin' was not declared in this scope

   pinMode(blueLEDPin, OUTPUT);

           ^

C:\Users\mdkar\OneDrive\Documents\Arduino\project4.4\project4.4.ino: In function 'void loop()':

project4.4:52: error: 'blueLEDPin' was not declared in this scope

   analogWrite(blueLEDPin, blueValue);

               ^

exit status 1
'blueLEDPin' was not declared in this scope

This report would have more information with
"Show verbose output during compilation"
option enabled in File -> Preferences.
